# crowbar

./: .gitignore  LICENSE  README.md  crowbar.py  flake.nix  index.html  pyproject.toml  tasks.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
site/: gensite.py  page_index.py  site.css  sitegen.py  sitetags.py
site/examples/: block_example  c_func_utils.py  components_ex_c_func.c  intro_ex1.cpp  lists_indent.py
tests/: __init__.py  preproc_base_indent  preproc_base_indent.expected  preproc_code_indent_insufficient  preproc_code_indent_insufficient_multiple_1  preproc_code_indent_insufficient_multiple_2  preproc_eof_code  preproc_eof_out  preproc_first_line  preproc_first_line.expected  preproc_global_emit  preproc_global_emit.expected  preproc_inline  preproc_inline.expected  preproc_multiple_emits_inline  preproc_multiple_emits_inline.expected  preproc_no_code_blocks  preproc_no_code_blocks.expected  preproc_parse_line_comments  preproc_parse_line_comments.expected  preproc_parse_multiline_comments  preproc_parse_multiline_comments.expected  preproc_state  preproc_state.expected  test_preprocessor.py  test_render.py  test_runner.py
tests/test_utils/: utils.py
