[project]
name = "py-htt-redux"
version = "0.2.1"
description = ""
authors = [
    {name = "Jesper Wendel Devantier",email = "jwd@defmacro.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.mypy]
python_version = "0.2.1"
disallow_untyped_defs = true

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
tox = "^4.30.2"
pygments = "^2.19.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
